log
Wed, Mar 26, 2025 12:02:42 PM: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
25021aa
Wed, Mar 26, 2025 12:10:07 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
b91faac
Wed, Mar 26, 2025 12:11:47 PM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
7d863bf
Wed, Mar 26, 2025 12:13:29 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
1e932cf
Wed, Mar 26, 2025  9:27:59 PM: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
558dbde
Wed, Mar 26, 2025  9:31:12 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
25d567e
Wed, Mar 26, 2025  9:31:58 PM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
e3bfc6b
Wed, Mar 26, 2025  9:32:36 PM: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
064b370
Wed, Mar 26, 2025  9:37:05 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 15/70
cacc6c4
Wed, Mar 26, 2025  9:39:24 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
e14ab8e
Wed, Mar 26, 2025  9:43:29 PM: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
928fbeb
Wed, Mar 26, 2025  9:44:33 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
83e7e2e
Wed, Mar 26, 2025  9:44:46 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5b1bec0
Wed, Mar 26, 2025  9:52:10 PM: 
 list.c | 18 +++++++++---------
 1 file changed, 9 insertions(+), 9 deletions(-)
 tests:  0|0
cf4c6b9
Wed, Mar 26, 2025 10:00:21 PM: 
 list.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  0|0
6d451a4
Wed, Mar 26, 2025 10:06:19 PM: 
 list.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
 tests:  0|0
dad9dbd
Wed, Mar 26, 2025 10:08:07 PM: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:47:5: error: 'return' with no value, in function returning non-void [-Werror]
     return ;
     ^~~~~~
list.c:45:8: note: declared here
 void * nextList(List * list) { // Retorna el siguiente dato de la lista
        ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
811943d
Wed, Mar 26, 2025 10:09:10 PM: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
5eb451a
Wed, Mar 26, 2025 10:27:17 PM: 
 list.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  6|4
total_score: 25/70
e475b72
Wed, Mar 26, 2025 10:40:24 PM: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
list.c: In function 'prevList':
list.c:58:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
10ce025
Wed, Mar 26, 2025 10:43:02 PM: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  6|4
total_score: 25/70
022fea7
Wed, Mar 26, 2025 10:45:38 PM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|4
total_score: 25/70
88d539c
Wed, Mar 26, 2025 10:48:01 PM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
a832b2b
Wed, Mar 26, 2025 10:48:42 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
56d1fc5
Wed, Mar 26, 2025 10:51:01 PM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
7f8df70
Wed, Mar 26, 2025 10:54:13 PM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
87d5b97
Wed, Mar 26, 2025 10:55:07 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
bd86204
Wed, Mar 26, 2025 11:03:56 PM: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:65:12: error: 'return' with a value, in function returning void [-Werror]
     return newNode ;
            ^~~~~~~
list.c:61:6: note: declared here
 void pushFront(List * list, void * data) {
      ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
c9be9fd
Wed, Mar 26, 2025 11:05:02 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:66:12: error: 'return' with a value, in function returning void [-Werror]
     return newNode ;
            ^~~~~~~
list.c:61:6: note: declared here
 void pushFront(List * list, void * data) {
      ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
7021682
Wed, Mar 26, 2025 11:17:45 PM: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  9|3
total_score: 35/70
4010d01
